--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -9,6 +9,7 @@
     "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node-modules src/server.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
     "@types/json2csv": "^5.0.1",
     "@types/multer": "^1.4.5",
@@ -16,6 +17,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "csv-parse": "^4.14.2",
     "express": "^4.17.1",
